Avance Notificador, tenemos contextos para la notificacion hicimos builder y demases